get all, get 1, upload file
